# CSA-ITMO

./: .coverage  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
python/: __init__.py  main.py
tests/: test_main.py
tests/goldens/: test.yml
