[tool.poetry]
name = "CSA-ITMO"
version = "0.1.0"
description = "Лабораторная работа №3 по дисциплине Архитектура компьютера"
authors = ["Грибич Елизавета <liza692235@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-golden = "^0.2.2"
ruff = "^0.1.3"
black = "^22.3.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false

[tool.ruff]
line-length = 120
